# python-playwright-automation-tests-playground

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setting.py
reports/: example_report_2026-02-21_22-03-07.html
site/: Dockerfile  index.html
tests/: conftest.py  test_webcam_video_stream.py
tests/features/: video_stream_injection.feature
videos/: example_playwright_video_stream_injection_run.webm
